--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "imarc/craft-boost",
     "description": "A Craft plugin that provides basic deployment.",
+    "homepage": "https://github.com/imarc/craft-boost",
+    "version": "0.3.2",
     "type": "library",
     "license": "Apache",
     "authors": [
